--- a/front/index.html
+++ b/front/index.html
@@ -1,17 +1,27 @@
 <html>
-  <body id="body">
-    <script
+  <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  </head>
+  <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"
-    ></script>
-    inserire mail:
-    <input type="text" id="mail" placeholder="email" />
-    inserire password:
-    <input type="password" id="pwd" placeholder="password" />
-    <button id="b1">invia</button>
+      crossorigin="anonymous"></script>
+  <body id="body">
+    <div class=".container-fluid">
+      inserire mail:
+      <div class="d-grid gap-2">
+        <button class="btn btn-primary" type="button">sign-in</button>
+      </div>
+      <input type="text" id="mail" placeholder="email" />
+      inserire password:
+      <input type="password" id="pwd" placeholder="password" />
+      <h1 id="h1"></h1>
+      <div class="d-grid gap-2">
+        <button class="btn btn-primary" type="button">sign-up</button>
+      </div>
+    </div>
     <script>
-      $("#b1").click(function () {
+      $("#in").click(function () {
         var mail = $("#mail").val();
         var password = $("#pwd").val();
         if (mail && password) {
@@ -24,15 +34,38 @@
             method: "GET",
             success: function (data) {
               console.log("success", data);
-              $("body").css("background-color","green");
+              $("body").css("background-color", "green");
             },
             error: function (data) {
               console.log("error", data);
-              $("body").css("background-color","red");
+              $("body").css("background-color", "red");
+            },
+          });
+        }
+      });
+      $("#up").click(function () {
+        var mail = $("#mail").val();
+        var password = $("#pwd").val();
+        if (mail && password) {
+          $.ajax({
+            url:
+              "http://localhost:3000/api/register?mail=" +
+              mail +
+              "&password=" +
+              password,
+            method: "GET",
+            success: function (data) {
+              console.log("success", data);
+              $("#h1").html("registrazione avvenuta correttamente");
+            },
+            error: function (data) {
+              console.log("error", data);
+              $("#h1").html("registrazione fallita");
             },
           });
         }
       });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
